// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`rendering <ToggledWithPermissions> <RestrictedByPermissions> when permissions are defined should match snapshot 1`] = `
<withUserPermissions(RestrictedByPermissions)
  permissions={
    Array [
      "ViewProducts",
    ]
  }
  shouldMatchSomePermissions={true}
>
  <ItemChild />
</withUserPermissions(RestrictedByPermissions)>
`;

exports[`rendering <ToggledWithPermissions> <ToggleFeature> when featureToggle is defined should match snapshot 1`] = `
<ToggleFeature
  flag="myFeature"
>
  <withUserPermissions(RestrictedByPermissions)
    permissions={Array []}
    shouldMatchSomePermissions={true}
  >
    <ItemChild />
  </withUserPermissions(RestrictedByPermissions)>
</ToggleFeature>
`;

exports[`rendering <ToggledWithPermissions> <ToggleFeature> when featureToggle is not defined should match snapshot 1`] = `
<withUserPermissions(RestrictedByPermissions)
  permissions={Array []}
  shouldMatchSomePermissions={true}
>
  <ItemChild />
</withUserPermissions(RestrictedByPermissions)>
`;
